--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <area target="" alt="Team Roles" title="Team Roles" href="SitePages/CommingSoon.html" coords="537,410,580,468" shape="rect">
     <area target="" alt="Vision and Strategy" title="Vision and Strategy" href="SitePages/CommingSoon.html" coords="271,59,426,101" shape="rect">
     <area target="" alt="Solution Intent" title="Solution Intent" href="SitePages/CommingSoon.html" coords="336,180,437,202" shape="rect">
-    <area target="" alt="Requirements" title="Requirements" href="SitePages/CommingSoon.html" coords="389,288,483,306" shape="rect">
+    <area target="" alt="Requirements" title="Requirements" href="SitePages/Requirements.html" coords="389,288,483,306" shape="rect">
     <area target="" alt="Epic" title="Epic" href="SitePages/CommingSoon.html" coords="173,112,18" shape="circle">
     <area target="" alt="Epic" title="Epic" href="SitePages/CommingSoon.html" coords="205,110,16" shape="circle">
     <area target="" alt="Epic" title="Epic" href="SitePages/CommingSoon.html" coords="216,127,13" shape="circle">
